<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_frag"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:tabGravity="center"
        app:tabIndicatorColor="@color/purple_200"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorGravity="bottom"
        app:tabIndicatorHeight="3dp"
        app:tabInlineLabel="false"
        app:tabMode="auto"
        app:tabRippleColor="@color/purple_200"
        app:tabSelectedTextColor="@color/purple_200"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Body2"
        app:tabTextColor="@color/text_color" />

    <Button
        android:id="@+id/btn_pop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/btn_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anim_control"
        app:layout_constraintStart_toEndOf="@id/btn_pop"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/btn_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/night_switch"
        app:layout_constraintStart_toEndOf="@id/btn_anim"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <Button
        android:id="@+id/btn_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        app:layout_constraintStart_toEndOf="@id/btn_night"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pop" />

</androidx.constraintlayout.widget.ConstraintLayout>